--- a/kaggle/notebook.ipynb
+++ b/kaggle/notebook.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5c326d4",
+   "id": "30377bbf",
    "metadata": {
     "papermill": {
-     "duration": 0.002763,
-     "end_time": "2024-12-13T08:34:31.011444",
+     "duration": 0.002311,
+     "end_time": "2025-01-02T06:58:35.039786",
      "exception": false,
-     "start_time": "2024-12-13T08:34:31.008681",
+     "start_time": "2025-01-02T06:58:35.037475",
      "status": "completed"
     },
     "tags": []
@@ -28,13 +28,11 @@
     "\n",
     "<div style=\"display: flex;\">\n",
     "<div>\n",
-    "<br>\n",
     "<center>\n",
     "<img src=\"https://raw.githubusercontent.com/qntkhvn/timing/refs/heads/main/figures/kelce_motion.gif\">\n",
     "</center>\n",
     "</div>\n",
     "<div>\n",
-    "<br>\n",
     "<center>\n",
     "<img src=\"https://raw.githubusercontent.com/qntkhvn/timing/refs/heads/main/figures/hardman_motion.gif\">\n",
     "</center>\n",
@@ -44,7 +42,7 @@
     "In each animation, the solid gold line along the motion player's path (dashed gray line) represents the trajectory portion between the start of motion and the ball-snap.\n",
     "It is apparent that the plays differ in the duration of this color-coded portion of the path.\n",
     "In the first play, the snap happens 3.6 seconds after Travis Kelce begins his motion, whereas in the second, less than a second elapses since Mecole Hardman starts motioning.\n",
-    "As both plays result in significant gains (a first down and touchdown), this highlights Mahomes' ability to react, anticipate, and time the snaps in various situations, elevating the effectiveness of the entire KC offensive unit.\n",
+    "As both plays result in significant gains (a first down and a touchdown), this highlights Mahomes' ability to react, anticipate, and time the snaps in various situations, elevating the effectiveness of the entire KC offensive unit.\n",
     "\n",
     "Thus, in every play, it is important for the quarterback to synchronize the snap with the team's offensive execution, in order to keep the defense off balance and offense in control.\n",
     "In this work, **we propose a multilevel modeling framework to assess a passer's ability to adapt and align the snap with their team's pre-snap motion, culminating in a novel approach for measuring variability in QB snap timing.**\n",
@@ -53,18 +51,18 @@
     "\n",
     "We define the snap timing $\\delta$ for a play as the number of frames elapsed between the start of motion $(t_{\\text{motion}})$ and the ball-snap $(t_{\\text{snap}}).$\n",
     "That is,$$\\delta=t_{\\text{snap}}-t_{\\text{motion}}\\,.$$ \n",
-    "Note that in our analysis, we only consider **plays with receivers in motion at snap and also running a route.**\n",
+    "In our analysis, we only consider **plays with receivers in motion at snap and also running a route.**\n",
     "\n",
     "Here, it is straightforward to obtain $t_{\\text{snap}}$ for each play using the frame label in the tracking data.\n",
     "Conversely, identifying $t_{\\text{motion}}$ requires more effort, due to [inconsistency between player-level motion indicators and annotated tracking events](https://www.kaggle.com/competitions/nfl-big-data-bowl-2025/discussion/543709).\n",
     "\n",
     "We use the following procedure to determine $t_{\\text{motion}}$ for each play.\n",
     "\n",
-    "-   For plays where the player in motion at snap is also the only player in motion since line-set, we use the `man_in_motion` event frame in the tracking data as the start of motion.\n",
+    "-   For plays where the player in motion at snap is also the only player in motion since line-set, we use the `man_in_motion` event frame as the start of motion.\n",
     "\n",
-    "-   For the remaining plays (specifically, plays where motion player at snap is not the sole player in motion since line-set, and plays with players charted as in motion at snap but without a `man_in_motion` tracking event):\n",
+    "-   For the remaining plays (specifically, plays where motion player at snap is not the sole player in motion since line-set, and plays with players charted as in motion at snap but without a `man_in_motion` event):\n",
     "\n",
-    "    -   We first observe the distribution for the ratio between the speed of motion player at `man_in_motion` and their maximum speed between line-set and snap (only using plays with $t_{\\text{motion}}$ identified earlier). \n",
+    "    -   We first observe the distribution for the ratio between motion player's speed at `man_in_motion` and their maximum speed between line-set and snap (only using plays with $t_{\\text{motion}}$ identified earlier). \n",
     "\n",
     "    -   We then choose the average ratio value of 0.45 as the threshold for determining the start of motion for the remaining plays. Specifically, we assign $t_{\\text{motion}}$ as the first frame between line-set and snap where the player reaches at least 45% of their top speed.\n",
     "\n",
@@ -72,13 +70,13 @@
     "\n",
     "## Model specification\n",
     "\n",
-    "The observed timing between motion and snap on a single play is surely attributable to numerous variables—from contextual and spatiotemporal features, to the players and teams involved.\n",
+    "The observed timing between motion and snap on a play is surely attributable to numerous variables—from contextual and spatiotemporal features, to the players and teams involved.\n",
     "To this end, we fit the following multilevel model:\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\delta_i&\\sim\\textsf{Gamma}(\\mu_i,\\alpha_i)\\\\\n",
     "\\\\\n",
-    "\\log\\mu_i&=\\gamma_0+\\boldsymbol{\\beta X_i}+b_{q[i]}+b_{m_[i]}+b_{d[i]}\\\\\n",
+    "\\log\\mu_i&=\\gamma_0+\\boldsymbol{\\beta X_i}+b_{q[i]}+b_{m[i]}+b_{d[i]}\\\\\n",
     "b_q&\\sim\\textsf{Normal}(0,\\sigma^2_q)\\\\\n",
     "b_m&\\sim\\textsf{Normal}(0,\\sigma^2_m)\\\\\n",
     "b_d&\\sim\\textsf{Normal}(0,\\sigma^2_d)\\\\\n",
@@ -87,12 +85,12 @@
     "u_q&\\sim\\textsf{Normal}(0,\\tau^2_q)\\\\\n",
     "\\end{aligned}\n",
     "$$\n",
-    "In detail, we model the response $\\delta_i>0$ (snap timing for play $i$) using a Gamma distribution (with log link function,\n",
+    "Here, we model the response $\\delta_i>0$ (snap timing for play $i$) using a Gamma distribution (with log link function,\n",
     "[parameterized by mean $\\mu$ and shape $\\alpha$](https://paulbuerkner.com/brms/articles/brms_families.html#:~:text=The%20density%20of%20the%20Gamma,shape%20parameter)),\n",
     "which is well-suited for modeling a positive, continuous (\"interarrival time\") variable like our case.\n",
     "\n",
     "Of primary interest, we model the shape $\\alpha$ (which is proportional to the Gamma distribution's variance) with QB random effects.\n",
-    "This allows us to examine the variability in timing between motion and snap among NFL quarterbacks.\n",
+    "This enables us to estimate the differences in the snap timing variability among NFL quarterbacks.\n",
     "From an offensive standpoint, we hypothesize that a higher timing variability is beneficial because it prevents defenses from predicting when the snap will occur.\n",
     "This may allow the offense to control the game flow and exploit defensive vulnerabilities.\n",
     "\n",
@@ -100,9 +98,9 @@
     "Moreover, we account for contextual and personnel information about play $i$ through $\\boldsymbol{X_i}$, and estimate the coefficients $\\boldsymbol\\beta$ as fixed effects.\n",
     "These include the current down, number of timeouts remaining for the offense, play clock at the start of motion, motion player's position, number of players in motion since line-set, and type of motion, as they all can impact the timing between motion and snap.\n",
     "\n",
-    "It is noteworthy that the motion type is a vital feature for modeling snap timing, since it relates to play design.\n",
+    "Note that the motion type is a vital feature for modeling snap timing, since it relates to play design.\n",
     "For instance, in a play-action pass, a team can fake a jet sweep to set up the QB for a pass.\n",
-    "However, this information is not provided in the data, prompting us to consider a clustering algorithm to identify the different types of motion.\n",
+    "This information, however, is not provided in the data, prompting us to consider a clustering algorithm to identify the different types of motion.\n",
     "\n",
     "## Motion type clustering\n",
     "\n",
@@ -126,19 +124,19 @@
     "\n",
     "Our multilevel model is fit in a Bayesian framework via the `brms` `R` package using four parallel chains of 10,000 iterations and 5,000 burn-in draws.\n",
     "We perform diagnostics by inspecting trace plots as well as computing the $\\widehat{R}$ and effective sample size statistics, and find no issues with model convergence and efficiency.\n",
-    "Our Bayesian approach provides natural uncertainty quantification for our model parameters via their posterior distributions.\n",
+    "Our Bayesian approach naturally provides uncertainty quantification for the model parameters via their posterior distributions.\n",
     "As it turns out, among the considered random effects, the largest source variation is between QBs when modeling the snap timing shape (captured by $\\tau_q^2$).\n",
     "Thus, we focus on the QB shape random effects $u_q$ in the following analysis.\n",
     "\n",
     "## Leaderboard\n",
     "\n",
     "The following figure displays the posterior distributions for the shape random effect $u_q$ (ordered by posterior mean) for QBs with at least 50 pass attempts across the considered motion plays.\n",
-    "For each player, the posterior mean value provides an estimate for their ability to maintain variability in snap timing, **with higher posterior means corresponding to greater variability in timing between the start of motion and snap.**\n",
+    "For each player, the posterior mean provides an estimate for their ability to maintain variability in snap timing, **with higher posterior mean values corresponding to greater variability in timing between the start of motion and snap.**\n",
     "\n",
     "Patrick Mahomes stands out as the top QB according our measure, adding the ability to time snaps as another element to his success.\n",
     "Other high-caliber QBs such as Tom Brady and Josh Allen are also among the leaders in our rankings.\n",
     "Note that there is considerable uncertainty in our estimates, as demonstrated by the rather wide credible intervals (CIs), which is unsurprising given our limited sample of motion plays.\n",
-    "Still, we observe substantial differences in the CIs across this subset of QBs.\n",
+    "Still, we observe substantial differences in the CIs among these quarterbacks.\n",
     "For instance, the 95% CI for Daniel Jones (who ranks last in our leaderboard) does not overlap with the top five quarterbacks' 95% CIs.\n",
     "\n",
     "<center>\n",
@@ -154,24 +152,24 @@
     "**We observe that lower snap timing variability corresponds to higher rate of facing havoc events created by the opposing defense.**\n",
     "This makes intuitive sense, as when there is little variability in timing, the offense is likely to be predictable and experience unfavorable play outcomes.\n",
     "In contrast, by varying the duration between motion and snap, offenses can create uncertainty, forcing defenders to play more cautiously which reduces their effectiveness in executing disruptive plays.\n",
+    "Although we focus on snap timing for passing plays with motion, our estimates may also serve as proxies for QB awareness or pocket presence, as indicated by the moderate correlation with havoc rate across all passing plays (not just the plays considered in our model).\n",
     "\n",
     "<center>\n",
     "<img src=\"https://raw.githubusercontent.com/qntkhvn/timing/refs/heads/main/figures/corr_havoc.png\" style=\"width:99%\">\n",
     "</center>\n",
     "\n",
-    "As a side note, the posterior mean for the shape random effect scarcely correlates with the rate of motion on all passing plays $(r = 0.11)$ over the first nine weeks of the 2022 season.\n",
-    "Additionally, there is a weak correlation between motion rate and havoc rate $(r = -0.09)$.\n",
-    "This suggests that **our measure of QB snap timing variability provides independent information of motion tendency, while also being a more direct indicator of encountering defensive disruptions than the prevalence of motion.**\n",
+    "As a side note, the posterior mean for the shape random effect scarcely correlates with the rate of motion on all passing plays $(r=0.11)$ over the first nine weeks of the 2022 season.\n",
+    "Additionally, there is a weak correlation between motion rate and havoc rate $(r=-0.09)$.\n",
+    "This suggests that our measure of QB snap timing variability provides independent information of motion tendency, while also being a more direct indicator of encountering defensive disruptions than the rate of motion.\n",
     "\n",
     "# Discussion\n",
     "\n",
     "Variability in snap timing is an essential aspect for an offense to dictate plays and make it difficult for defenses to anticipate and react.\n",
     "Through multilevel modeling, we provide an assessment of a quarterback's ability to maintain variable snap timing with their teammates' motion.\n",
     "We demonstrate that higher variability in snap timing is beneficial for the passing game, as it relates to experiencing less disruptions generated by the defense.\n",
-    "Although we solely focus on snap timing for passing plays with motion, our estimates may also serve as proxies for QB awareness or pocket presence, as indicated by the moderate correlation with havoc rate across all passing plays (not just the plays considered in our model).\n",
     "\n",
     "Our proposed framework is not without limitations.\n",
-    "First, to identify the start of motion, we use a threshold-based criterion which relies on the moment at which the motion player achieves a certain fraction of their top speed prior to the snap.\n",
+    "First, to identify the start of motion, we use a threshold-based criterion which relies on the moment the motion player achieves a certain fraction of their top speed before the snap.\n",
     "This is certainly a simple viewpoint, as one could come up with a more robust definition by building a model to predict the starting motion frame.\n",
     "Further, despite the reasonable set of inputs in our cluster analysis, there is possibly room for improvement in identifying the motion types by having more refined features, or alternatively using a functional clustering approach.\n",
     "Since neither of these tasks is the main focus of our work, we leave these explorations for the future.\n",
@@ -193,11 +191,7 @@
     "\n",
     "---\n",
     "\n",
-    "[Quang Nguyen](https://github.com/qntkhvn) and [Ron Yurko](https://github.com/ryurko)\n",
-    "\n",
-    "Department of Statistics & Data Science\n",
-    "\n",
-    "Carnegie Mellon University"
+    "[Quang Nguyen](https://github.com/qntkhvn) and [Ron Yurko](https://github.com/ryurko)<br>Department of Statistics & Data Science<br>Carnegie Mellon University"
    ]
   }
  ],
@@ -235,14 +229,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 3.46582,
-   "end_time": "2024-12-13T08:34:31.436603",
+   "duration": 4.091073,
+   "end_time": "2025-01-02T06:58:35.461932",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-12-13T08:34:27.970783",
+   "start_time": "2025-01-02T06:58:31.370859",
    "version": "2.6.0"
   }
  },
